--- a/List.ipynb
+++ b/List.ipynb
@@ -879,44 +879,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
-   "id": "44ae4f7d",
+   "execution_count": 2,
+   "id": "6e7cef36",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<>:1: SyntaxWarning: 'int' object is not subscriptable; perhaps you missed a comma?\n",
-      "<>:1: SyntaxWarning: 'int' object is not subscriptable; perhaps you missed a comma?\n",
-      "C:\\Users\\admin\\AppData\\Local\\Temp\\ipykernel_2168\\3474611260.py:1: SyntaxWarning: 'int' object is not subscriptable; perhaps you missed a comma?\n",
-      "  l1=[1,2,3,4['apple','banana',['cat','dog',['python']]]]\n",
-      "C:\\Users\\admin\\AppData\\Local\\Temp\\ipykernel_2168\\3474611260.py:1: SyntaxWarning: 'int' object is not subscriptable; perhaps you missed a comma?\n",
-      "  l1=[1,2,3,4['apple','banana',['cat','dog',['python']]]]\n",
-      "C:\\Users\\admin\\AppData\\Local\\Temp\\ipykernel_2168\\3474611260.py:1: SyntaxWarning: 'int' object is not subscriptable; perhaps you missed a comma?\n",
-      "  l1=[1,2,3,4['apple','banana',['cat','dog',['python']]]]\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'int' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [132]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m l1\u001b[38;5;241m=\u001b[39m[\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mapple\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mbanana\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mcat\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mdog\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mpython\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m\u001b[43m]\u001b[49m]\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not subscriptable"
+      "(10, 20, 30)\n"
      ]
     }
    ],
    "source": [
-    "l1=[1,2,3,4['apple','banana',['cat','dog',['python']]]]\n"
+    "#Tuple packing and unpacking\n",
+    "a=10\n",
+    "b=20\n",
+    "c=30\n",
+    "t=a,b,c  #Tuple packing\n",
+    "print(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "a71662b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a,b,t #tuple inpacking\n",
+    "a"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e7cef36",
+   "id": "85ad269a",
    "metadata": {},
    "outputs": [],
    "source": []
